--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Vadym Prokopchuk",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.26.13",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -19,7 +20,7 @@
     "gulp-uglify-es": "^2.0.0",
     "jquery": "^3.5.1",
     "mixitup": "^3.3.2",
-    "sass": "^1.58.0"
+    "sass": "^1.86.3"
   },
   "dependencies": {
     "slick-carousel": "^1.8.1"
