--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "gulp-start",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Vadym Prokopchuk",
-  "license": "ISC",
-  "devDependencies": {
-    "@fancyapps/fancybox": "^3.5.7",
-    "browser-sync": "^2.26.13",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-uglify-es": "^2.0.0",
-    "jquery": "^3.5.1",
-    "mixitup": "^3.3.2",
-    "sass": "^1.86.3"
-  },
-  "dependencies": {
-    "slick-carousel": "^1.8.1"
-  }
+	"name": "gulp-start",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "gulp dev",
+		"build": "gulp build",
+		"start": "gulp serve",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Vadym Prokopchuk",
+	"license": "ISC",
+	"devDependencies": {
+		"@fancyapps/fancybox": "^3.5.7",
+		"browser-sync": "^2.26.13",
+		"del": "^6.0.0",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^7.0.1",
+		"gulp-concat": "^2.6.1",
+		"gulp-imagemin": "^7.1.0",
+		"gulp-sass": "^5.1.0",
+		"gulp-uglify-es": "^2.0.0",
+		"jquery": "^3.5.1",
+		"mixitup": "^3.3.2",
+		"sass": "^1.86.3"
+	},
+	"dependencies": {
+		"slick-carousel": "^1.8.1"
+	}
 }
