--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"postinstall": "chmod +x node_modules/.bin/gulp",
-		"build": "gulp build"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": ".",
 	"license": ".",
