--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,13 @@
 	"builds": [
 		{
 			"src": "package.json",
-			"use": "@vercel/static-build",
-			"config": {
-				"distDir": "dist",
-				"installCommand": "npm install --ignore-scripts"
-			}
+			"use": "@vercel/static-build"
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "dist"
 		}
 	]
 }
