--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "gulp",
 		"build": "gulp build",
-		"vercel-build": "gulp build"
+		"vercel-build": "npx gulp build"
 	},
 	"author": ".",
 	"license": ".",
